--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="ruta_a_tu_favicon.ico" type="image/x-icon">
-    <script src="script.js"></script>
 
 </head>
 
@@ -69,7 +68,7 @@
                 <img src="emergency.jpg" alt="Ambualert">
             </div>
             <nav class="menu">
-                <ul>
+                <ul class="menu__items">
                     <li><a href="#">Incendio</a></li>
                     <li><a href="#">Accidente</a></li>
                     <li><a href="#">Rescate</a></li>                   
@@ -112,6 +111,11 @@
         </main>
     </div>
 
+     <!-- Pie de página -->
+ <footer>
+    <p>&copy; 2024 App de Emergencias | Desarrollado por JUANITA HERRERA</p>
+</footer>
+
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
     <script>
@@ -153,11 +157,8 @@
             }
         });
     </script>
+
 </body>
 
 </html>
 
- <!-- Pie de página -->
- <footer>
-    <p>&copy; 2024 App de Emergencias | Desarrollado por JUANITA HERRERA</p>
-</footer>
