he cambiado el logo de la pagina web

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="dashboard">
         <aside class="sidebar">
             <div class="logo">
-                <img src="emergency.jpg" alt="Ambualert">
+                <img src="logo_small_icon_only.png" alt="Ambualert">
             </div>
             <nav class="menu">
                 <ul class="menu__items">
